2001-07-16  Michael Thome  <mthome@bbn.com>

	* ConfigFinder
	Allow -Dorg.cougaar.core.util.ConfigFinder.verbose=true to enable
	verbose mode.

2001-06-15 Beth DePass <bdepass@bbn.com>
	* ClusterImpl, SharedPlugInManager, SharedThreadingService,
	PlugInAdaper, etc
	Move PlugIn shared threading to a service.  SharedPlugInManager
	now implements SharedThreadingService.
	SharedThreadingServiceProvider
	is responsible for creating a SharedPlugInManager for each
	cluster. There are no hooks to Shared Threading in Cluster or
	PlugInManager now.


2001-05-04  Michael Thome  <mthome@bbn.com>

	* RMIMessageTransport
	Add a default-enabled setting org.cougaar.message.lazyLookup which
	batches namespace lookups instead of having each destination queue
	do the job.  This can dramatically reduce the number of threads
	used in "cut down" societies, and is an expecially big win when
	useNodeDelivery=true or fastTransport=true.

2001-05-01  Michael Thome  <mthome@bbn.com>

	* DBConnectionPool
	Add additional debugging support when runtime-enabled.

	* ScoringFunction
	Cache Best points which had often been recomputed every time.

	* RMINameServer
	Implement a fast, RMI-less query path when the nameserver is in
	the same VM.

2001-04-30  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/util/TimeSpanSet.java:
	Bug #373
	Reimplement search as binary search to speed up insertions.

	* org/cougaar/util/MoreMath.java:
	Bug #372
	New method: nearlyEqual compares two doubles for near equality.
	Equality comparisons of doubles is instrinsically difficult
	because of rounding. This methods checks the relative difference
	between two doubles and their values. There are two versions, one
	with a fixed tolerance of one part per billion and one with a
	specifiable tolerance.

2001-04-19  Michael Thome  <mthome@bbn.com>

	* AllocationResultAggregator
	Aggregate only results actually reported.  Actually has a
	significantly lower memory load then before as well.
	Fixes bug 322. 
